# otterbridge-browser-mcp

./: .gitignore  README.md  bootstrap.ps1  browser-agent-dev-guide.md  requirements.txt  start.ps1  start.sh
.github/workflows/: release.yml
agent/: pyproject.toml  run_agent.py
extension/: background.js  config.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js
legacy/: README.md  bootstrap.sh  start.ps1  start.sh
legacy/server-python/: echo_test.py  pyproject.toml  server.py
server/: .gitignore  .mcpbignore  README.md  build.mjs  manifest.json  otterbridge.mcpb  package-lock.json  package.json  server.py
server-node/: .mcpbignore  README.md  manifest.json  package-lock.json  package.json  tsconfig.json
server-node/demo/: multiagent.mjs
server-node/src/: index.ts
server-node/test/: env.mjs  http.mjs  security.mjs  stdio.mjs
server/demo/: simultaneous.mjs
server/src/: index.ts
server/test/: env.mjs  http.mjs  multitab.mjs  parallel.mjs  stdio.mjs
