[project]
name = "otterbridge-agent-runner"
version = "0.1.0"
description = "Example LangGraph MCP client for OtterBridge / the Otter browser agent"
requires-python = ">=3.11"
authors = [{ name = "wen-da-ng", email = "lenus.ng.wen.da@gmail.com" }]
dependencies = [
    "langgraph>=0.2",
    "langchain-mcp-adapters>=0.1",
    # add your provider integration, e.g. langchain-anthropic / langchain-ollama
]
